nestum/tests/ui/fail_variant_attr.rs
use nestum::nestum;

#[nestum]
pub enum Outer {
    #[nestum]
    Bad(Inner),
}

#[nestum]
pub enum Inner {
    A,
}

fn main() {}
